// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List Item Layout horizontal itemLayout List should accept extra node 1`] = `
<div
  class="ezd-list ezd-list-split"
>
  <div
    class="ezd-spin-nested-loading"
  >
    <div
      class="ezd-spin-container"
    >
      <ul
        class="ezd-list-items"
      >
        <li
          class="ezd-list-item"
        >
          <div
            class="ezd-list-item-meta"
          >
            <div
              class="ezd-list-item-meta-content"
            >
              <h4
                class="ezd-list-item-meta-title"
              >
                <a
                  href="https://saastest3.ys7.com/ezd/"
                >
                  EZ Design
                </a>
              </h4>
              <div
                class="ezd-list-item-meta-description"
              >
                EZ Design, a design language for background applications, is refined by EZVIZ Team.
              </div>
            </div>
          </div>
          <ul
            class="ezd-list-item-action"
          >
            <li>
              <a>
                Action
              </a>
            </li>
          </ul>
          <span>
            extra
          </span>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`List Item Layout rowKey could be function 1`] = `
<List
  dataSource={
    Array [
      Object {
        "id": 1,
        "title": "EZ Design",
      },
      Object {
        "id": 2,
        "title": "EZ Design",
      },
      Object {
        "id": 3,
        "title": "EZ Design",
      },
    ]
  }
  renderItem={[Function]}
  rowKey={[Function]}
>
  <div
    className="ezd-list ezd-list-split"
  >
    <Spin
      size="default"
      spinning={false}
      wrapperClassName=""
    >
      <div
        className="ezd-spin-nested-loading"
      >
        <div
          className="ezd-spin-container"
          key="container"
        >
          <ul
            className="ezd-list-items"
          >
            <Item>
              <li
                className="ezd-list-item"
              >
                EZ Design
              </li>
            </Item>
            <Item>
              <li
                className="ezd-list-item"
              >
                EZ Design
              </li>
            </Item>
            <Item>
              <li
                className="ezd-list-item"
              >
                EZ Design
              </li>
            </Item>
          </ul>
        </div>
      </div>
    </Spin>
  </div>
</List>
`;

exports[`List Item Layout rowKey could be string 1`] = `
<List
  dataSource={
    Array [
      Object {
        "id": 1,
        "title": "EZ Design",
      },
      Object {
        "id": 2,
        "title": "EZ Design",
      },
      Object {
        "id": 3,
        "title": "EZ Design",
      },
    ]
  }
  renderItem={[Function]}
  rowKey="id"
>
  <div
    className="ezd-list ezd-list-split"
  >
    <Spin
      size="default"
      spinning={false}
      wrapperClassName=""
    >
      <div
        className="ezd-spin-nested-loading"
      >
        <div
          className="ezd-spin-container"
          key="container"
        >
          <ul
            className="ezd-list-items"
          >
            <Item>
              <li
                className="ezd-list-item"
              >
                EZ Design
              </li>
            </Item>
            <Item>
              <li
                className="ezd-list-item"
              >
                EZ Design
              </li>
            </Item>
            <Item>
              <li
                className="ezd-list-item"
              >
                EZ Design
              </li>
            </Item>
          </ul>
        </div>
      </div>
    </Spin>
  </div>
</List>
`;

exports[`List Item Layout should render in RTL direction 1`] = `
<div
  class="ezd-list ezd-list-split ezd-list-rtl"
>
  <div
    class="ezd-spin-nested-loading"
  >
    <div
      class="ezd-spin-container"
    >
      <ul
        class="ezd-list-items"
      >
        <li
          class="ezd-list-item"
        >
          <div
            class="ezd-list-item-meta"
          >
            <div
              class="ezd-list-item-meta-content"
            >
              <h4
                class="ezd-list-item-meta-title"
              >
                <a
                  href="https://saastest3.ys7.com/ezd/"
                >
                  EZ Design
                </a>
              </h4>
              <div
                class="ezd-list-item-meta-description"
              >
                EZ Design, a design language for background applications, is refined by EZVIZ Team.
              </div>
            </div>
          </div>
          <ul
            class="ezd-list-item-action"
          >
            <li>
              <a>
                Action
              </a>
            </li>
          </ul>
          <span>
            extra
          </span>
        </li>
      </ul>
    </div>
  </div>
</div>
`;
